# pyslurm_prometheus_exporter

./: README.md  pyproject.toml
src/: README.md
src/slurm_prometheus_exporter/: __init__.py  cli.py  collector.py
